# graph-world-model

./: .gitignore  README.md  pyproject.toml
docs/: claims.md  final_audit.md
experiments/: run_experiments.py  v3_cached_evidence.py  v4_frozen_evidence.py
paper/: abstract.md  paper.md
paper/final/: graph world model-v4-manifest.json
paper/iclr/: main.tex  references.bib  v3_results_macros.tex  v4_results_macros.tex
results/: claim_evidence_map.json  claims_status.json  claims_status.md  run_summary.json
results/tables/: ablation_metrics.csv  adaptive_gate_metrics.csv  exact_law_validation.csv  learned_model_metrics.csv  learned_model_predictions.csv  repair_metrics.csv  seed_metrics.csv  statistical_tests.csv  stress_metrics.csv
results/v3_cached_evidence/: summary.json  v3_artifact_inventory.csv  v3_claim_inventory.csv  v3_constraint_shadow_matrix.csv  v3_family_robustness.csv  v3_repair_gate_summary.csv
results/v4_frozen_evidence/: summary.json  v4_artifact_inventory.csv  v4_benchmark_protocol_bridge.csv  v4_cell_gate_matrix.csv  v4_claim_gates.csv  v4_claim_inventory.csv  v4_compute_frontier.csv  v4_learned_calibration.csv  v4_topology_holdout.csv
scripts/: build_paper.sh  build_v3_paper.py  build_v4_paper.py  run_all.sh  run_bulletproof.sh  run_claim_audit.sh  run_smoke.sh  run_v3_claim_audit.py  run_v4_claim_audit.py
src/graph_constraint_tail_audit/: __init__.py  audit.py  learned_model.py  stats.py  theory.py
src/graph_physics_best_of_n/: audit.py  (+6 more)
tests/: test_artifacts_claims.py  test_graph_physics.py  test_learned_model.py  test_theory.py
